@@ -15,50 +15,52 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.transaction.annotation.Transactional;
-
 import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @SpringBootTest(classes = TaskManagerApplication.class)
 @Transactional
 class TaskManagerServiceIT {
 
     @Autowired
-    private TaskManagerService service;
+    TaskManagerService service;
 
     @Autowired
-    private TaskRepository taskRepository;
+    TaskRepository taskRepository;
 
     @Autowired
-    private TaskListRepository taskListRepository;
+    TaskListRepository taskListRepository;
 
     @Test
-    @DisplayName("Create list and retrieve all lists")
+    @DisplayName("Create list and retrieve all lists from endpoint")
     void createAndGetListsTest() {
         TaskListRequest request = new TaskListRequest("List 1");
         TaskListResponse created = service.createList(request);
 
         assertNotNull(created.getId());
+
         List<TaskListResponse> allLists = service.getAllLists();
         assertEquals(1, allLists.size());
-        assertEquals("List 1", allLists.get(0).getName());
+        assertEquals("List 1", allLists.getFirst().getName());
     }
 
     @Test
-    @DisplayName("Add, update and delete task")
+    @DisplayName("Add, update and delete task operation in sequence")
     void addUpdateDeleteTaskTest() {
-        TaskListResponse list = service.createList(new TaskListRequest("List 1"));
-        TaskRequest taskReq = new TaskRequest("Task 1", "Desc 1");
-        TaskResponse task = service.addTaskToList(list.getId(), taskReq);
+        TaskListResponse taskList = service.createList(new TaskListRequest("List 1"));
+        TaskRequest taskRequest = new TaskRequest("Task 1", "Desc 1");
 
-        // Update
-        TaskRequest update = new TaskRequest("Updated", "Updated Desc");
+        TaskResponse task = service.addTaskToList(taskList.getId(), taskRequest);
+
+        TaskRequest update = new TaskRequest("Updated", "Updated Description");
         TaskResponse updated = service.updateTask(task.getId(), update);
         assertEquals("Updated", updated.getName());
+        assertEquals("Updated Description", updated.getDescription());
 
-        // Delete
-        service.deleteTask(list.getId(), task.getId());
+        service.deleteTask(taskList.getId(), task.getId());
         assertFalse(taskRepository.findById(task.getId()).isPresent());
     }
 
@@ -79,11 +81,13 @@ class TaskManagerServiceIT {
     void moveTaskTest() {
         TaskListResponse list1 = service.createList(new TaskListRequest("List 1"));
         TaskListResponse list2 = service.createList(new TaskListRequest("List 2"));
-        TaskResponse task = service.addTaskToList(list1.getId(), new TaskRequest("Task", "Desc"));
+        TaskResponse task = service.addTaskToList(list1.getId(), new TaskRequest("Task", "Description"));
 
         TaskResponse moved = service.moveTask(list1.getId(), task.getId(), list2.getId());
+
         assertNotNull(moved);
-        // fetch actual entity from DB to check list
+
+        // Fetch actual entity from DB to check list.
         Task movedEntity = taskRepository.findById(moved.getId()).orElseThrow();
         assertEquals(list2.getId(), movedEntity.getTaskList().getId());
     }
@@ -91,7 +95,7 @@ class TaskManagerServiceIT {
     @Test
     @DisplayName("Operations on non-existing entities throw EntityNotFoundException")
     void nonExistingEntitiesTest() {
-        TaskRequest taskRequest = new TaskRequest("Task", "Desc");
+        TaskRequest taskRequest = new TaskRequest("Task", "Description");
 
         assertThrows(EntityNotFoundException.class, () -> service.addTaskToList(999L, taskRequest));
         assertThrows(EntityNotFoundException.class, () -> service.updateTask(999L, taskRequest));
